site responsivo com barra de rolagem e tambem foi feita algumas mudancas na estilizacao

--- a/Front-End/src/style/style.css
+++ b/Front-End/src/style/style.css
@@ -1,1 +1,6 @@
 @import url(global.css);
+@import url(header.css);
+@import url(escalaSemanal.css);
+@import url(midais.css);
+@import url(responsivo.css);
+
